<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FormActivity"
    android:gravity="center_horizontal"
    android:background="#EADDC9"
    android:id="@+id/formActivityPage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_contact"
            android:textSize="24sp"
            android:textColor="#938F8F"/>

        <EditText
            android:id="@+id/searchUserName"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/usernameHint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#938F8F"/>

        <EditText
            android:id="@+id/searchNickname"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#938F8F"/>

        <EditText
            android:id="@+id/searchServer"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/server_number"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#938F8F"/>


        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>