<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EADDC9"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="@string/textview"
            android:textColor="#4C2E2E"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/editTextLoginPersonName"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:text=""
            android:hint="@string/usernameHint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:text=""
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/loginErrorMessage"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:rotationX="-2"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="don't have a user?"
            android:padding="10dp"/>

        <Button
            android:id="@+id/SignInBtn"
            android:layout_width="136dp"
            android:layout_height="37dp"
            android:text="@string/sing_in"
            android:textColor="#000000"
            android:background="#EADDC9"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>